--- a/clock/src/index.pug
+++ b/clock/src/index.pug
@@ -4,9 +4,9 @@ html(lang="en")
 		meta(charset="UTF-8")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
-		link(rel="stylesheet", href="css/main.css")
-		script(src="./js/main.js")
+		link(rel="stylesheet", href="css/all.min.css")
 		title clock
 	body(class="bg-yellow-400")
 		.clock
-			p.pageTime 00:00:00 PM
+			p(id="pt" class="pageTime") 00:00:00 PM
+		script(src="./js/all.min.js")
